--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: var(--font-nunito-sans), sans-serif;
+  font-family: Arial, sans-serif;
 }
 
 ::-webkit-scrollbar {
